--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* overflow: hidden; */
 }
 
 /* ================= FORM ================ */
@@ -16,4 +17,46 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+}
+
+/* ================== Loader ===========   */
+.loader-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid white;
+  border-bottom-color: #ff3d00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* ==================== NAVBAR ==================  */
+
+.navbar {
+  background-color: #000000 !important;
+  color: white !important;
+}
+
+.nav-link,
+.navbar-brand {
+  color: white !important;
 }
